syntax = "proto3";

package pb;

option go_package = "github.com/lazyxu/kfs/pb";

service KoalaFS {
  rpc branchCheckout (BranchReq) returns (BranchResp) {
  }
  rpc branchInfo (BranchInfoReq) returns (BranchInfoResp) {
  }
  rpc list (PathReq) returns (stream FileInfo) {
  }
  rpc upload (stream UploadReq) returns (UploadResp) {
  }
  rpc download (DownloadReq) returns (stream DownloadResp) {
  }
  rpc backup (stream BackupReq) returns (stream BackupResp) {
  }
}

message DownloadReq {
  string branchName = 1;
  string path = 2;
}

message DownloadResp {
  bytes bytes = 1;
}

message UploadReq {
  bool isLast = 1;
  UploadReqHeader header = 2;
  bytes bytes = 3;
}

message UploadReqHeader {
  UploadReqMetadata metadata = 1;
  string branchName = 2;
}

message UploadReqMetadata {
  string path = 1;
  string Hash = 2;
  uint64 Mode = 3;
  uint64 Size = 4;
  uint64 CreateTime = 5;
  uint64 ModifyTime = 6;
  uint64 ChangeTime = 7;
  uint64 AccessTime = 8;
}

message UploadResp {
  bool exist = 1;
  uint64 commitId = 2;
  string hash = 3;
}

message BranchInfoReq {
  string branchName = 1;
}

message BranchInfoResp {
  string name = 1;
  string description = 2;
  uint64 commitId = 3;
  uint64 size = 4;
  uint64 count = 5;
}

message BranchReq {
  string branchName = 1;
}

message BranchResp {
  bool exist = 1;
}

message BackupReqHeader {
  string branchName = 2;
  string base = 3;
}

message BackupReq {
  // enter
  BackupReqHeader header = 2;
  UploadReqMetadata metadata = 3;
  bytes bytes = 4;
  // exit
  bool isLast = 5;
  // final
  bool done = 1;
}

message FileOrDir {
  uint64 id = 1;
  string hash = 2;
  uint64 size = 3;
  uint64 count = 4;
  uint64 totalCount = 5;
}

message BackupResp {
  bool done = 1;
  bool canceled = 2;
  UploadResp uploadResp = 3;
  BackupErrResp err = 4;
  string process = 5;
}

message BackupErrResp {
  string err = 1;
  string path = 2;
}

message PathReq {
  string branchName = 1;
  string path = 2;
}

message FileInfo {
  string Hash = 1;
  string Name = 2;
  uint64 Mode = 3;
  uint64 Size = 4;
  uint64 Count = 5;
  uint64 TotalCount = 6;
  uint64 CreateTime = 7;
  uint64 ModifyTime = 8;
  uint64 ChangeTime = 9;
  uint64 AccessTime = 10;
}
